# Raytracer

./: .gitignore  .gitmodules  CMakeLists.txt  camera.cpp  camera.h  geometry.cpp  geometry.h  image.cpp  image.h  light.cpp  light.h  material.cpp  material.h  parser.cpp  parser.h  primitive.cpp  primitive.h  ray.cpp  ray.h  raytracer.cpp  raytracer.h  scene.cpp  scene.h  viewport.cpp  viewport.h
scenes/: mirror_image_refract.json
